 20120712 (T.S.):
 - strm.c: let pmelf_delstrm() accept (and ignore) NULL stream argument.
 20120622 (T.S.):
 - pmelf.h:   Added definition for SHT_GNU_HASH
 - bfd.c:     Ignore/skip SHT_GNU_HASH
 - dmpshdr.c: Print string info for GNU section types.
 20100630 (T.S.):
 - configure.ac, bfd.c: Added test for <strings.h>. rtems-4.10/newlib-1.18
   declare strcasecmp() in <strings.h> (POSIX). Hence we include that
   if present.
 20091202 (T.S.):
 - att-gnu-powerpc.c: BUGFIX: scanning for ABI tags would access
   bad memory if tag was not present in object file. 
   Added Tag_GNU_Power_ABI_Struct_Return.
   Added GNU_Power_ABI_FP_SP_HARD (new value for FP tag).
 - attrP.h, attpbfasdestroy.c, att-gnu-powerpc.c, attpbfasmatch.c,
   attbpfasprint.c, attpbfasread.c, attset.c:
   Introduced new union combining 'public' and 'opaque' values.
   Previous implementation was wrong since it would not correctly
   store 'opaque' values (arrays assumed 'public' layout).
   The new union is now used in both, the array and list parts
   of an attribute table.
 - attrP.h, attset.c, att-gnu-powerpc.c: Added new function
   'pmelf_attribute_get_tag_val()' for retrieving the value associated
   with a particular tag.
 20090625 (T.S.):
 - bfd.c: Fixed conditional compilation in elf2bfdsec():
   If 64-bit support is enabled then the 32-bit code
   must still be compiled (there is a run-time test for
   64/32-bit).

 20090625 (T.S.):
 - bfd.c, dmpehdr.c, dmprels.c, getehdr.c, pmbfd.h,
   pmelf.h, bfd-reloc-sparc.c (stub only): Added basic
   support for SPARC (no relocations yet).

 20090625 (T.S.):
 - Added ChangeLog
 - minor 64-bit fixes:
   o getehdr.c: added missing 'break;' to switch
       statement in pmelf_getehdr().
   o dmprels.c: Fixed wrong member name
       (p_p_s64 -> p_s64) in dmprels.c
