@@ -69,10 +69,11 @@
 
 struct _Elf_Stream {
 	void    *f;
-	char    *name;
+	 char    *name;
 	size_t  (*read) (void *buf, size_t size, size_t nmemb, void* stream);
 	size_t  (*write)(const void *buf, size_t size, size_t nmemb, void* stream);
-	int     (*seek) (void* stream, long offset, int whence);
+	int     (*seek) (void* stream, off_t offset, int whence);
+	off_t   (*tell) (void *stream);
 	int     (*close)(void* s);
 	uint16_t machine;
 	uint8_t  needswap;
